--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ div.d {
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/profile_pic_3.png" alt="" width="200"/></span>
 						<h1>Peng Danni</h1>
-						<p>“Act as if what you do makes a difference. It does.” — <em>William James</em><br />
+						<p>“Act as if what you do makes a difference. It does.” — William James<br />
 						<!-- built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>. -->
 						</p>
 					</header>
@@ -64,7 +64,7 @@ div.d {
 											<h2>About</h2>
 										</header>
 										<p>Hi! My name is Peng Danni (彭丹昵). I'm currently a second-year Ph.D student <br /> in School of Computer Science and Engineering, 
-											Nanyang Technological University, Singapore. <br /> I'm honored to work under the supervision of <a href="https://personal.ntu.edu.sg/sinnopan/">Prof. Sinno Jialin Pan</a> .</p>
+											Nanyang Technological University, Singapore. <br /> I'm honored to be supervised by <a href="https://personal.ntu.edu.sg/sinnopan/">Prof. Sinno Jialin Pan</a> and co-supervised by <a href="https://personal.ntu.edu.sg/zhangj/">Prof. Zhang Jie</a>.</p>
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
 										<!-- </ul> -->
@@ -108,7 +108,7 @@ div.d {
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Experience</h2>
-									<p>I've gained experience in Machine Learning, Text Mining and Software Development <br />  through my internships and undergraduate final year project.</p>
+									<p>I've gained experience in Machine Learning, Text Mining and Software Development through my internships and undergraduate final year project.</p>
 								</header>
 								<ul class="statistics">
 									<li class="style3">
@@ -150,14 +150,14 @@ div.d {
 									<h2>Research</h2>
 									<p>My research interests are <b>Incremental Recommender Systems</b> and <b>Continual Learning</b>.</p>
 									<div class="b">
-										<h3 style="font-size:150%"><u>Publications</u> </h3>
-										<p style="font-size:120%"><b>1. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update </b><br />
+										<h3 style="font-size:2.5vw"><u>Publications</u> </h3>
+										<p style="font-size:2vw"><b>1. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update </b><br />
 										[<a href="https://github.com/danni9594/SRIU">code</a>]<br />
 										Danni Peng, Xiaobo Hu, Anxiang Zeng, Jie Zhang<br />
 										AAAI 2021 (Student Abstract)
 										</p>
-										<h3 style="font-size:150%"><u>Teaching</u> </h3>
-										<p style="font-size:120%"><b>CZ1015 Introduction to Data Science and Artificial Intelligence, NTU (AY 2019-20 Semester 2)</b><br />
+										<h3 style="font-size:2.5vw"><u>Teaching</u> </h3>
+										<p style="font-size:2vw"><b>CZ1015 Introduction to Data Science and Artificial Intelligence, NTU (AY 2019-20 Semester 2)</b><br />
 										<b>CZ3005 Artificial Intelligence, NTU (AY 2020-21 Semester 1)</b>
 										</p>
 									</div>
@@ -166,8 +166,8 @@ div.d {
 
 					</div>
 
-				<!-- Footer -->
-					<footer id="footer">
+				Footer
+					<!-- <footer id="footer"> -->
 						<!-- <section>
 							<h2>Aliquam sed mauris</h2>
 							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
