--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ div.d {
 											<h2>About</h2>
 										</header>
 										<p>Hi! My name is Peng Danni (彭丹昵). I'm currently a second-year Ph.D student <br /> in School of Computer Science and Engineering, 
-											Nanyang Technological University, Singapore. <br /> I'm honored to be supervised by <a href="https://personal.ntu.edu.sg/sinnopan/">Prof. Sinno Jialin Pan</a> and co-supervised by <a href="https://personal.ntu.edu.sg/zhangj/">Prof. Zhang Jie</a>.</p>
+											Nanyang Technological University, Singapore. <br /> I'm honored to be supervised by <a href="https://personal.ntu.edu.sg/sinnopan/">Prof. Sinno Jialin Pan</a> and co-supervised by <a href="https://personal.ntu.edu.sg/zhangj/">Prof. Jie Zhang</a>.</p>
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
 										<!-- </ul> -->
