--- a/index.html
+++ b/index.html
@@ -6,21 +6,10 @@
 -->
 <html>
 <style>
-div.a {
-	text-align: center;
-}
-
 div.b {
 	text-align: left;
 }
 
-div.c {
-	text-align: right;
-} 
-
-div.d {
-	text-align: justify;
-} 
 </style>
 	<head>
 		<title>Peng Danni</title>
@@ -64,7 +53,7 @@ div.d {
 											<h2>About</h2>
 										</header>
 										<p>Hi! My name is Peng Danni (彭丹昵). I'm currently a second-year Ph.D student <br /> in School of Computer Science and Engineering, 
-											Nanyang Technological University, Singapore. <br /> I'm honored to be supervised by <a href="https://personal.ntu.edu.sg/sinnopan/">Prof. Sinno Jialin Pan</a> and co-supervised by <a href="https://personal.ntu.edu.sg/zhangj/">Prof. Jie Zhang</a>.</p>
+											Nanyang Technological University, Singapore. <br /> I'm honored to work under the supervision of <a href="https://personal.ntu.edu.sg/sinnopan/">Prof. Sinno Jialin Pan</a> .</p>
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
 										<!-- </ul> -->
@@ -108,7 +97,7 @@ div.d {
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Experience</h2>
-									<p>I've gained experience in Machine Learning, Text Mining and Software Development through my internships and undergraduate final year project.</p>
+									<p>I've gained experience in Machine Learning, Text Mining and Software Development <br />  through my internships and undergraduate final year project.</p>
 								</header>
 								<ul class="statistics">
 									<li class="style3">
@@ -148,7 +137,7 @@ div.d {
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Research</h2>
-									<p>My research interests are <b>Incremental Recommender Systems</b> and <b>Continual Learning</b>.</p>
+									<p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b> with application in <b>Recommender Systems</b>.</p>
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
 										<p style="font-size:120%"><b>1. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update </b><br />
