--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ div.b {
 											<h2>About</h2>
 										</header>
 										<p>Hi! My name is Peng Danni (彭丹昵). I'm currently a second-year Ph.D student <br /> in School of Computer Science and Engineering, 
-											Nanyang Technological University, Singapore. <br /> I'm honored to work under the supervision of <a href="https://personal.ntu.edu.sg/sinnopan/">Prof. Sinno Jialin Pan</a> .</p>
+											Nanyang Technological University, Singapore. <br /> I'm honored to be supervised by <a href="https://personal.ntu.edu.sg/sinnopan/">Prof. Sinno Jialin Pan</a>, and co-supervised by <a href="https://personal.ntu.edu.sg/zhangj/">Prof. Jie Zhang</a>. </p>
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
 										<!-- </ul> -->
@@ -137,17 +137,19 @@ div.b {
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Research</h2>
-									<p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b> with application in <b>Recommender Systems</b>.</p>
+									<p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b> with applications in <b>Recommender Systems</b>.</p>
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
 										<p style="font-size:120%"><b>1. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update </b><br />
-										[<a href="https://github.com/danni9594/SRIU">code</a>]<br />
+										[<a href="https://github.com/danni9594/SRIU">code</a>][<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17928">paper</a>]<br />
 										Danni Peng, Xiaobo Hu, Anxiang Zeng, Jie Zhang<br />
 										AAAI 2021 (Student Abstract)
 										</p>
-										<h3 style="font-size:150%"><u>Teaching</u> </h3>
-										<p style="font-size:120%"><b>CZ1015 Introduction to Data Science and Artificial Intelligence, NTU (AY 2019-20 Semester 2)</b><br />
-										<b>CZ3005 Artificial Intelligence, NTU (AY 2020-21 Semester 1)</b>
+										<h3 style="font-size:150%"><u>Teaching Assistant</u> </h3>
+										<p style="font-size:120%"><b>CZ4041/​CE4041: Machine Learning, NTU (AY 2020-21 Semester 2)</b><br />
+											<b>CZ3005: Artificial Intelligence, NTU (AY 2020-21 Semester 1)</b><br />
+										<b>CZ1015/​CE1015: Introduction to Data Science and Artificial Intelligence, NTU (AY 2019-20 Semester 2)</b>
+										
 										</p>
 									</div>
 								</header>
