--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ div.b {
 						<ul>
 							<li><a href="#intro" class="active">About</a></li>
 							<li><a href="#first">Education</a></li>
-							<li><a href="#second">Experience</a></li>
+							<!-- <li><a href="#second">Experience</a></li> -->
 							<li><a href="#cta">Research</a></li>
 						</ul>
 					</nav>
@@ -94,44 +94,27 @@ div.b {
 							</section>
 
 						<!-- Second Section -->
-							<section id="second" class="main special">
-								<header class="major">
-									<h2>Experience</h2>
-									<p>I've gained experience in Machine Learning, Text Mining and Software Development <br />  through my internships and undergraduate final year project.</p>
-								</header>
-								<ul class="statistics">
-									<li class="style3">
-										<!-- <span class="icon solid fa-code-branch"></span> -->
-										<span class="logo"><img src="images/gf_logo.png" alt="" width="62"/></span>
-										<strong>GlobalFoundries </strong> Data Analyst Intern <br /> Jan 2018 - Jun 2018
-									</li>
-									<!-- <li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
-									</li> -->
-									<li class="style1">
-										<!-- <span class="icon solid fa-signal"></span> -->
-										<span class="logo"><img src="images/seagate_logo.png" alt="" width="70"/></span>
+							<!-- <section id="second" class="main special"> -->
+								<!-- <header class="major"> -->
+									<!-- <h2>Experience</h2> -->
+									<!-- <p>I've gained experience in Machine Learning, Text Mining and Software Development <br />  through my internships and undergraduate final year project.</p> -->
+								<!-- </header> -->
+								<!-- <ul class="statistics"> -->
+									<!-- <li class="style3"> -->
+										<!-- <span class="logo"><img src="images/gf_logo.png" alt="" width="62"/></span> -->
+										<!-- <strong>GlobalFoundries </strong> Data Analyst Intern <br /> Jan 2018 - Jun 2018 -->
+									<!-- </li> -->
+									<!-- <li class="style1"> -->
+										<!-- <span class="logo"><img src="images/seagate_logo.png" alt="" width="70"/></span> -->
 						
-										<strong>Seagate Technology </strong> Data Analyst Intern <br /> Dec 2018 - Mar 2019
-									</li>
-									<!-- <li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li> -->
-									<li class="style5">
-										<!-- <span class="icon fa-gem"></span> -->
-										<span class="logo"><img src="images/pil_logo.png" alt="" width="132"/></span>
-										<strong>Pacific International Lines </strong> System Design Project <br /> Aug 2018 - May 2019
-									</li>
-								</ul>
-								<!-- <p class="content"></p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer> -->
-							</section>
+										<!-- <strong>Seagate Technology </strong> Data Analyst Intern <br /> Dec 2018 - Mar 2019 -->
+									<!-- </li> -->
+									<!-- <li class="style5"> -->
+										<!-- <span class="logo"><img src="images/pil_logo.png" alt="" width="132"/></span> -->
+										<!-- <strong>Pacific International Lines </strong> System Design Project <br /> Aug 2018 - May 2019 -->
+									<!-- </li> -->
+								<!-- </ul> -->
+							<!-- </section> -->
 
 						<!-- Get Started -->
 							<section id="cta" class="main special">
@@ -168,21 +151,21 @@ div.b {
 						</section> -->
 						<!-- <section> -->
 							<!-- <h2>Contact</h2> -->
-							<!-- <dl class="alt"> -->
+							<dl class="alt">
 								<!-- <dt>Address</dt> -->
 								<!-- <dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd> -->
 								<!-- <dt>Phone</dt> -->
 								<!-- <dd>(000) 000-0000 x 0000</dd> -->
-								<!-- <dt>Email</dt> -->
-								<!-- <dd><a href="#">danni001@ntu.edu.sg</a></dd> -->
-							<!-- </dl> -->
-							<!-- <ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul> -->
+								<dt>Email</dt>
+								<dd>danni001@ntu.edu.sg</a></dd>
+							</dl>
+							<ul class="icons">
+								<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
+								<li><a href="https://github.com/danni9594" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<li><a href="https://linkedin.com/in/danni-peng-001" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
+							</ul>
 						<!-- </section> -->
 						<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
 					</footer>
