--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ div.b {
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
 										<p style="font-size:120%"><b>1. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update </b><br />
-										[<a href="https://github.com/danni9594/SRIU">code</a>][<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17928">paper</a>]<br />
+										[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17928">paper</a>][<a href="https://github.com/danni9594/SRIU">code</a>]<br />
 										Danni Peng, Xiaobo Hu, Anxiang Zeng, Jie Zhang<br />
 										AAAI 2021 (Student Abstract)
 										</p>
@@ -162,7 +162,7 @@ div.b {
 							<ul class="icons">
 								<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
 								<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
+								<li><a href="https://scholar.google.com/citations?hl=en&user=Y7KdCkAAAAAJ" class="icon brands fa-google alt"><span class="label">GoogleScholar</span></a></li>
 								<li><a href="https://github.com/danni9594" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="https://linkedin.com/in/danni-peng-001" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
 							</ul>
