--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ div.b {
 							<ul class="icons">
 								<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
 								<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
-								<li><a href="https://scholar.google.com/citations?hl=en&user=Y7KdCkAAAAAJ" class="icon brands fa-google alt"><span class="label">GoogleScholar</span></a></li>
+<!-- 								<li><a href="https://scholar.google.com/citations?hl=en&user=Y7KdCkAAAAAJ" class="icon brands fa-google alt"><span class="label">GoogleScholar</span></a></li> -->
 								<li><a href="https://github.com/danni9594" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="https://linkedin.com/in/danni-peng-001" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
 							</ul>
