--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 div.b {
 	text-align: left;
 }
+a { text-decoration: none; }
 
 </style>
 	<head>
-		<title>Peng Danni</title>
+		<title>Danni Peng</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,7 +27,7 @@ div.b {
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/profile_pic_3.png" alt="" width="200"/></span>
-						<h1>Peng Danni</h1>
+						<h1>Danni Peng</h1>
 						<p>“Act as if what you do makes a difference. It does.” — <em>William James</em><br />
 						<!-- built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>. -->
 						</p>
@@ -52,8 +53,8 @@ div.b {
 										<header class="major">
 											<h2>About</h2>
 										</header>
-										<p>Hi! My name is Peng Danni (彭丹昵). I'm currently a second-year Ph.D student <br /> in School of Computer Science and Engineering, 
-											Nanyang Technological University, Singapore. <br /> I'm honored to be supervised by <a href="https://personal.ntu.edu.sg/sinnopan/">Prof. Sinno Jialin Pan</a>, and co-supervised by <a href="https://personal.ntu.edu.sg/zhangj/">Prof. Jie Zhang</a>. </p>
+										<p>Hi! My name is Danni Peng (彭丹昵). I'm currently a 2nd year Ph.D student
+											at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a>, sponsored by the <a href="https://www.ntu.edu.sg/alibaba-ntu-jri" style="color:blue">Alibaba Talent Programme</a>. I'm honored to be supervised by <a href="https://personal.ntu.edu.sg/sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a>, and co-supervised by <a href="https://personal.ntu.edu.sg/zhangj/" style="color:blue">Prof. Jie Zhang</a>. </p>
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
 										<!-- </ul> -->
@@ -71,14 +72,14 @@ div.b {
 									<li>
 										<!-- <span class="icon solid major style1 fa-code"></span> -->
 										<span class="logo"><img src="images/nus_logo.png" alt="" width="100"/></span>
-										<h3>National University of Singapore</h3>
-										<p>I received my B.E. with major in Industrial Systems Engineering & Management and minor in Statistics from National University of Singapore in 2019.</p>
+										<!-- <h3>National University of Singapore</h3> -->
+										<p>I received my B.E. in Industrial Systems Engineering & Management with minor in Statistics from <a href="https://www.nus.edu.sg/" style="color:blue">National University of Singapore (NUS)</a> in June, 2019.</p>
 									</li>
 									<li>
 										<!-- <span class="icon major style3 fa-copy"></span> -->
 										<span class="logo"><img src="images/ntu_logo.png" alt="" width="100"/></span>
-										<h3>Nanyang Technological University</h3>
-										<p>I'm currently pursuing my Ph.D. degree from School of Computer Science and Engineering, Nanyang Technological University.</p>
+										<!-- <h3>Nanyang Technological University</h3> -->
+										<p>I'm currently pursuing my Ph.D. degree in Computer Science and Engineering at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a> since July, 2019.</p>
 									</li>
 									<!-- <li>
 										<span class="icon major style5 fa-gem"></span>
@@ -123,11 +124,16 @@ div.b {
 									<p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b> with applications in <b>Recommender Systems</b>.</p>
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
-										<p style="font-size:120%"><b>1. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update </b><br />
-										[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17928">paper</a>][<a href="https://github.com/danni9594/SRIU">code</a>]<br />
-										Danni Peng, Xiaobo Hu, Anxiang Zeng, Jie Zhang<br />
-										AAAI 2021 (Student Abstract)
+										<p style="font-size:120%"><b>1. Learning an Adaptive Meta Model-Generator for Incrementally Updating Recommender Systems </b><br />
+										[<a style="color:green">paper</a>][<a style="color:orange">code</a>]<br />
+										Danni Peng, Sinno Jialin Pan<br />
+										ACM RecSys 2021
 										</p>
+										<p style="font-size:120%"><b>2. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update </b><br />
+											[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17928" style="color:green">paper</a>][<a href="https://github.com/danni9594/SRIU" style="color:orange">code</a>]<br />
+											Danni Peng, Xiaobo Hu, Anxiang Zeng, Jie Zhang<br />
+											AAAI 2021 (Student Abstract)
+											</p>
 										<h3 style="font-size:150%"><u>Teaching Assistant</u> </h3>
 										<p style="font-size:120%"><b>CZ4041/​CE4041: Machine Learning, NTU (AY 2020-21 Semester 2)</b><br />
 											<b>CZ3005: Artificial Intelligence, NTU (AY 2020-21 Semester 1)</b><br />
