--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ a { text-decoration: none; }
 										<header class="major">
 											<h2>About</h2>
 										</header>
-										<p>Hi! My name is Danni Peng (彭丹昵). I'm currently a 2nd year Ph.D student
-											at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a>, sponsored by the <a href="https://www.ntu.edu.sg/alibaba-ntu-jri" style="color:blue">Alibaba Talent Programme</a>. I'm honored to be supervised by <a href="https://personal.ntu.edu.sg/sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a>, and co-supervised by <a href="https://personal.ntu.edu.sg/zhangj/" style="color:blue">Prof. Jie Zhang</a>. </p>
+										<p>Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a 2nd year Ph.D student
+											at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a>, under the sponsorship of <a href="https://www.ntu.edu.sg/alibaba-ntu-jri" style="color:blue">Alibaba Talent Programme</a>. I'm honored to be supervised by <a href="https://personal.ntu.edu.sg/sinnopan/" style="color:blue">Assoc. Prof. Sinno Jialin Pan</a> and co-supervised by <a href="https://personal.ntu.edu.sg/zhangj/" style="color:blue">Assoc. Prof. Jie Zhang</a>. </p>
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
 										<!-- </ul> -->
@@ -73,7 +73,7 @@ a { text-decoration: none; }
 										<!-- <span class="icon solid major style1 fa-code"></span> -->
 										<span class="logo"><img src="images/nus_logo.png" alt="" width="100"/></span>
 										<!-- <h3>National University of Singapore</h3> -->
-										<p>I received my B.E. in Industrial Systems Engineering & Management with minor in Statistics from <a href="https://www.nus.edu.sg/" style="color:blue">National University of Singapore (NUS)</a> in June, 2019.</p>
+										<p>I received my B.E. degree in Industrial Systems Engineering and Management with minor in Statistics from <br /> <a href="https://www.nus.edu.sg/" style="color:blue">National University of Singapore (NUS)</a> <br /> in June, 2019.</p>
 									</li>
 									<li>
 										<!-- <span class="icon major style3 fa-copy"></span> -->
