--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ a { text-decoration: none; }
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
 										<p style="font-size:120%"><b>1. Learning an Adaptive Meta Model-Generator for Incrementally Updating Recommender Systems </b><br />
 										[<a style="color:green">paper</a>][<a style="color:orange">code</a>]<br />
-										Danni Peng, Sinno Jialin Pan<br />
+										Danni Peng, Sinno Jialin Pan, Jie Zhang, Anxiang Zeng<br />
 										ACM RecSys 2021
 										</p>
 										<p style="font-size:120%"><b>2. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update </b><br />
