--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@ a { text-decoration: none; }
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
 										<p style="font-size:120%"><b>1. Learning an Adaptive Meta Model-Generator for Incrementally Updating Recommender Systems </b><br />
-										[<a style="color:green">paper</a>][<a style="color:orange">code</a>]<br />
+										[<a style="color:green">paper</a>][<a style="color:orange">code</a>][<a style="color:purple">bibtex</a>]<br />
 										Danni Peng, Sinno Jialin Pan, Jie Zhang, Anxiang Zeng<br />
 										ACM RecSys 2021
 										</p>
 										<p style="font-size:120%"><b>2. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update </b><br />
-											[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17928" style="color:green">paper</a>][<a href="https://github.com/danni9594/SRIU" style="color:orange">code</a>]<br />
+											[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17928" style="color:green">paper</a>][<a href="https://github.com/danni9594/SRIU" style="color:orange">code</a>][<a href="https://dblp.uni-trier.de/rec/conf/aaai/PengHZZ21.html?view=bibtex" style="color:purple">bibtex</a>]<br />
 											Danni Peng, Xiaobo Hu, Anxiang Zeng, Jie Zhang<br />
 											AAAI 2021 (Student Abstract)
 											</p>
