--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a { text-decoration: none; }
 										<header class="major">
 											<h2>About</h2>
 										</header>
-										<p>Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a 2nd year Ph.D student
+										<p>Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a 2nd year PhD student
 											at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a>, under the sponsorship of <a href="https://www.ntu.edu.sg/alibaba-ntu-jri" style="color:blue">Alibaba Talent Programme</a>. I'm honored to be supervised by <a href="https://personal.ntu.edu.sg/sinnopan/" style="color:blue">Assoc. Prof. Sinno Jialin Pan</a> and co-supervised by <a href="https://personal.ntu.edu.sg/zhangj/" style="color:blue">Assoc. Prof. Jie Zhang</a>. </p>
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
@@ -125,7 +125,7 @@ a { text-decoration: none; }
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
 										<p style="font-size:120%"><b>1. Learning an Adaptive Meta Model-Generator for Incrementally Updating Recommender Systems </b><br />
-										[<a style="color:green">paper</a>][<a style="color:orange">code</a>][<a style="color:purple">bibtex</a>]<br />
+										[<a href="https://dl.acm.org/doi/10.1145/3460231.3474239" style="color:green">paper</a>][<a href="https://github.com/danni9594/ASMG" style="color:orange">code</a>][<a href="https://dblp.org/rec/conf/recsys/PengPZZ21.html?view=bibtex" style="color:purple">bibtex</a>]<br />
 										Danni Peng, Sinno Jialin Pan, Jie Zhang, Anxiang Zeng<br />
 										ACM RecSys 2021
 										</p>
