--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@ a { text-decoration: none; }
 <!-- 								<li><a href="https://scholar.google.com/citations?hl=en&user=Y7KdCkAAAAAJ" class="icon brands fa-google alt"><span class="label">GoogleScholar</span></a></li> -->
 								<li><a href="https://github.com/danni9594" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="https://linkedin.com/in/danni-peng-001" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://scholar.google.com/citations?hl=en&user=Y7KdCkAAAAAJ" class="icon brands fa-google alt"><span class="label">GoogleScholar</span></a></li>
 							</ul>
 						<!-- </section> -->
 						<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
