--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ a { text-decoration: none; }
 											<h2>About</h2>
 										</header>
 										<p>Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a 2nd year PhD student
-											at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a>, under the sponsorship of <a href="https://www.ntu.edu.sg/alibaba-ntu-jri" style="color:blue">Alibaba Talent Programme</a>. I'm honored to be supervised by <a href="https://personal.ntu.edu.sg/sinnopan/" style="color:blue">Assoc. Prof. Sinno Jialin Pan</a> and co-supervised by <a href="https://personal.ntu.edu.sg/zhangj/" style="color:blue">Assoc. Prof. Jie Zhang</a>. </p>
+											at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a>, under the sponsorship of <a href="https://www.ntu.edu.sg/alibaba-ntu-jri" style="color:blue">Alibaba Talent Programme</a>. I'm honored to be supervised by <a href="https://personal.ntu.edu.sg/sinnopan/" style="color:blue">Assoc. Prof. Sinno Jialin Pan</a>. </p>
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
 										<!-- </ul> -->
