--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ a { text-decoration: none; }
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">About</a></li>
-							<li><a href="#first">Education</a></li>
+							<!-- <li><a href="#first">Education</a></li> -->
 							<!-- <li><a href="#second">Experience</a></li> -->
 							<li><a href="#cta">Research</a></li>
 						</ul>
@@ -53,8 +53,8 @@ a { text-decoration: none; }
 										<header class="major">
 											<h2>About</h2>
 										</header>
-										<p>Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a 2nd year PhD student
-											at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a>, under the sponsorship of <a href="https://www.ntu.edu.sg/alibaba-ntu-jri" style="color:blue">Alibaba Talent Programme</a>. I'm honored to be supervised by <a href="https://personal.ntu.edu.sg/sinnopan/" style="color:blue">Assoc. Prof. Sinno Jialin Pan</a>. </p>
+										<p>Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a Ph.D. student
+											at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a>, advised by <a href="https://personal.ntu.edu.sg/sinnopan/" style="color:blue">Assoc. Prof. Sinno Jialin Pan</a>. Previously, I obtained my B.E. degree from <a href="https://www.nus.edu.sg/" style="color:blue">National University of Singapore (NUS)</a>. </p>
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
 										<!-- </ul> -->
@@ -64,35 +64,35 @@ a { text-decoration: none; }
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
-								<header class="major">
-									<h2>Education</h2>
-								</header>
-								<ul class="features">
-									<li>
+							<!-- <section id="first" class="main special"> -->
+								<!-- <header class="major"> -->
+									<!-- <h2>Education</h2> -->
+								<!-- </header> -->
+								<!-- <ul class="features"> -->
+									<!-- <li> -->
 										<!-- <span class="icon solid major style1 fa-code"></span> -->
-										<span class="logo"><img src="images/nus_logo.png" alt="" width="100"/></span>
+										<!-- <span class="logo"><img src="images/nus_logo.png" alt="" width="100"/></span> -->
 										<!-- <h3>National University of Singapore</h3> -->
-										<p>I received my B.E. degree in Industrial Systems Engineering and Management with minor in Statistics from <br /> <a href="https://www.nus.edu.sg/" style="color:blue">National University of Singapore (NUS)</a> <br /> in June, 2019.</p>
-									</li>
-									<li>
+										<!-- <p>I received my B.E. degree in Industrial Systems Engineering and Management with minor in Statistics from <br /> <a href="https://www.nus.edu.sg/" style="color:blue">National University of Singapore (NUS)</a> <br /> in June, 2019.</p> -->
+									<!-- </li> -->
+									<!-- <li> -->
 										<!-- <span class="icon major style3 fa-copy"></span> -->
-										<span class="logo"><img src="images/ntu_logo.png" alt="" width="100"/></span>
+										<!-- <span class="logo"><img src="images/ntu_logo.png" alt="" width="100"/></span> -->
 										<!-- <h3>Nanyang Technological University</h3> -->
-										<p>I'm currently pursuing my Ph.D. degree in Computer Science and Engineering at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a> since July, 2019.</p>
-									</li>
+										<!-- <p>I'm currently pursuing my Ph.D. degree in Computer Science and Engineering at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a> since July, 2019.</p> -->
+									<!-- </li> -->
 									<!-- <li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Dolor nullam</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li> -->
-								</ul>
+								<!-- </ul> -->
 								<!-- <footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer> -->
-							</section>
+							<!-- </section> -->
 
 						<!-- Second Section -->
 							<!-- <section id="second" class="main special"> -->
