--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ a { text-decoration: none; }
 											<h2>About</h2>
 										</header>
 										<p>Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a Ph.D. student
-											at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a>, advised by <a href="https://personal.ntu.edu.sg/sinnopan/" style="color:blue">Assoc. Prof. Sinno Jialin Pan</a>. Previously, I obtained my B.E. degree from <a href="https://www.nus.edu.sg/" style="color:blue">National University of Singapore (NUS)</a>. </p>
+											at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a>, advised by <a href="https://personal.ntu.edu.sg/sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a>. Previously, I obtained my B.E. degree from <a href="https://www.nus.edu.sg/" style="color:blue">National University of Singapore (NUS)</a>. </p>
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
 										<!-- </ul> -->
@@ -121,7 +121,7 @@ a { text-decoration: none; }
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Research</h2>
-									<p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b> with applications in <b>Recommender Systems</b>.</p>
+									<p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b> with applications.</p>
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
 										<p style="font-size:120%"><b>1. Learning an Adaptive Meta Model-Generator for Incrementally Updating Recommender Systems </b><br />
@@ -134,11 +134,15 @@ a { text-decoration: none; }
 											Danni Peng, Xiaobo Hu, Anxiang Zeng, Jie Zhang<br />
 											AAAI 2021 (Student Abstract)
 											</p>
+										<h3 style="font-size:150%"><u>Reviewer Services</u> </h3>
+										<p style="font-size:120%"><b>The 36th Annual Conference on Neural Information Processing Systems (NeurIPS 2022)</b><br />
+											<b>IEEE Transactions on Pattern Analysis and Machine Intelligence (IEEE TPAMI)</b><br />
+											<b>Artificial Intelligence (AIJ)</b>
+										</p>
 										<h3 style="font-size:150%"><u>Teaching Assistant</u> </h3>
 										<p style="font-size:120%"><b>CZ4041/​CE4041: Machine Learning, NTU (AY 2020-21 Semester 2)</b><br />
 											<b>CZ3005: Artificial Intelligence, NTU (AY 2020-21 Semester 1)</b><br />
-										<b>CZ1015/​CE1015: Introduction to Data Science and Artificial Intelligence, NTU (AY 2019-20 Semester 2)</b>
-										
+											<b>CZ1015/​CE1015: Introduction to Data Science and Artificial Intelligence, NTU (AY 2019-20 Semester 2)</b>
 										</p>
 									</div>
 								</header>
