--- a/index.html
+++ b/index.html
@@ -121,25 +121,36 @@ a { text-decoration: none; }
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Research</h2>
-									<p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b> with applications.</p>
+									<p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b>.</p>
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
-										<p style="font-size:120%"><b>1. Learning an Adaptive Meta Model-Generator for Incrementally Updating Recommender Systems </b><br />
+										<p style="font-size:120%"><b>1. Learning Gradient-based Mixup towards Flatter Minima for Domain Generalization </b><br />
+										[<a href="https://arxiv.org/abs/2209.14742" style="color:green">paper</a>]<br />
+										Danni Peng, Sinno Jialin Pan<br />
+										arXiv preprint
+										</p>
+										<p style="font-size:120%"><b>2. Learning an Adaptive Meta Model-Generator for Incrementally Updating Recommender Systems </b><br />
 										[<a href="https://dl.acm.org/doi/10.1145/3460231.3474239" style="color:green">paper</a>][<a href="https://github.com/danni9594/ASMG" style="color:orange">code</a>][<a href="https://dblp.org/rec/conf/recsys/PengPZZ21.html?view=bibtex" style="color:purple">bibtex</a>]<br />
 										Danni Peng, Sinno Jialin Pan, Jie Zhang, Anxiang Zeng<br />
 										ACM RecSys 2021
 										</p>
-										<p style="font-size:120%"><b>2. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update </b><br />
+										<p style="font-size:120%"><b>3. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update </b><br />
 											[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17928" style="color:green">paper</a>][<a href="https://github.com/danni9594/SRIU" style="color:orange">code</a>][<a href="https://dblp.uni-trier.de/rec/conf/aaai/PengHZZ21.html?view=bibtex" style="color:purple">bibtex</a>]<br />
 											Danni Peng, Xiaobo Hu, Anxiang Zeng, Jie Zhang<br />
 											AAAI 2021 (Student Abstract)
 											</p>
-										<h3 style="font-size:150%"><u>Reviewer Services</u> </h3>
-										<p style="font-size:120%"><b>The 36th Annual Conference on Neural Information Processing Systems (NeurIPS 2022)</b><br />
+										<h3 style="font-size:150%"><u>Services</u> </h3>
+										<h4 style="font-size:135%">Journal Reviewer</h4>
+										<p style="font-size:120%">
 											<b>IEEE Transactions on Pattern Analysis and Machine Intelligence (IEEE TPAMI)</b><br />
 											<b>Artificial Intelligence (AIJ)</b>
 										</p>
-										<h3 style="font-size:150%"><u>Teaching Assistant</u> </h3>
+										<h4 style="font-size:135%">Conference Reviewer</h4>
+										<p style="font-size:120%">
+											<b>The 36th Annual Conference on Neural Information Processing Systems (NeurIPS 2022)</b><br />
+											<b>The 11th International Conference on Learning Representations (ICLR 2023)</b><br />
+										</p>
+										<h3 style="font-size:150%"><u>Teaching</u> </h3>
 										<p style="font-size:120%"><b>CZ4041/​CE4041: Machine Learning, NTU (AY 2020-21 Semester 2)</b><br />
 											<b>CZ3005: Artificial Intelligence, NTU (AY 2020-21 Semester 1)</b><br />
 											<b>CZ1015/​CE1015: Introduction to Data Science and Artificial Intelligence, NTU (AY 2019-20 Semester 2)</b>
