--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ a { text-decoration: none; }
 											<h2>About</h2>
 										</header>
 										<p>Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a Ph.D. student
-											at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a>, advised by <a href="https://personal.ntu.edu.sg/sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a>. Previously, I obtained my B.E. degree from <a href="https://www.nus.edu.sg/" style="color:blue">National University of Singapore (NUS)</a>. </p>
+											at <a href="https://www.ntu.edu.sg/" style="color:blue">Nanyang Technological University (NTU)</a>, advised by <a href="https://personal.ntu.edu.sg/sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a>. Previously, I obtained my B.Eng. (Hons.) degree in industrial systems engineering from <a href="https://www.nus.edu.sg/" style="color:blue">National University of Singapore (NUS)</a>. My research interests include Meta Learning, Continual Learning and applications. </p>
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
 										<!-- </ul> -->
@@ -121,7 +121,7 @@ a { text-decoration: none; }
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Research</h2>
-									<p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b>.</p>
+									<!-- <p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b>.</p> -->
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
 										<p style="font-size:120%"><b>1. Learning Gradient-based Mixup towards Flatter Minima for Domain Generalization </b><br />
