--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ a { text-decoration: none; }
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/profile_pic_3.png" alt="" width="200"/></span>
-						<h1>Danni Peng</h1>
+						<h1>Danni PENG</h1>
 						<p>“Act as if what you do makes a difference. It does.” — <em>William James</em><br />
 						<!-- built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>. -->
 						</p>
