--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ a { text-decoration: none; }
 											<h2>About</h2>
 										</header>
 										<p>Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a Ph.D. student
-											at Nanyang Technological University (NTU), under the <a href="https://www.ntu.edu.sg/alibaba-ntu-jri" style="color:blue">Alibaba-NTU Talent Programme</a>. My supervisor is <a href="https://personal.ntu.edu.sg/sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a>. Previously, I obtained my B.Eng. (Hons.) degree from National University of Singapore (NUS). <br /> My research focuses on multi-task/multi-distribution learning scenarios including meta-learning, continual learning, and domain generalization, with applications in computer vision and recommender systems. </p>
+											at Nanyang Technological University (NTU), under the <a href="https://www.ntu.edu.sg/alibaba-ntu-jri" style="color:blue">Alibaba-NTU Talent Programme</a>. My supervisor is <a href="https://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a>. Previously, I obtained my B.Eng. (Hons.) degree from National University of Singapore (NUS). <br /> My research focuses on multi-task/multi-distribution learning scenarios including meta-learning, continual learning, and domain generalization, with applications in computer vision and recommender systems. </p>
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
 										<!-- </ul> -->
