--- a/index.html
+++ b/index.html
@@ -124,22 +124,22 @@ a { text-decoration: none; }
 									<!-- <p>My research interests are <b>Continual Learning</b> and <b>Meta Learning</b>.</p> -->
 									<div class="b">
 										<h3 style="font-size:150%"><u>Publications</u> </h3>
-										<p style="font-size:120%"><b>1. Clustered Task-Aware Meta-Learning by Learning from Learning Paths </b><br />
+										<p style="font-size:120%"><b>1. Clustered Task-Aware Meta-Learning by Learning from Learning Paths. </b><br />
 											[<a href="https://ieeexplore.ieee.org.remotexs.ntu.edu.sg/document/10061493" style="color:green">paper</a>][<a href="https://github.com/danni9594/CTML" style="color:orange">code</a>]<br />
 										Danni Peng, Sinno Jialin Pan<br />
 										IEEE TPAMI 2023
 										</p>
-										<p style="font-size:120%"><b>2. Learning Gradient-based Mixup towards Flatter Minima for Domain Generalization </b><br />
+										<p style="font-size:120%"><b>2. Learning Gradient-based Mixup towards Flatter Minima for Domain Generalization. </b><br />
 										[<a href="https://arxiv.org/abs/2209.14742" style="color:green">paper</a>]<br />
 										Danni Peng, Sinno Jialin Pan<br />
 										arXiv preprint 2022
 										</p>
-										<p style="font-size:120%"><b>3. Learning an Adaptive Meta Model-Generator for Incrementally Updating Recommender Systems </b><br />
+										<p style="font-size:120%"><b>3. Learning an Adaptive Meta Model-Generator for Incrementally Updating Recommender Systems. </b><br />
 										[<a href="https://dl.acm.org/doi/10.1145/3460231.3474239" style="color:green">paper</a>][<a href="https://github.com/danni9594/ASMG" style="color:orange">code</a>][<a href="https://dblp.org/rec/conf/recsys/PengPZZ21.html?view=bibtex" style="color:purple">bibtex</a>]<br />
 										Danni Peng, Sinno Jialin Pan, Jie Zhang, Anxiang Zeng<br />
 										RecSys 2021
 										</p>
-										<p style="font-size:120%"><b>4. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update </b><br />
+										<p style="font-size:120%"><b>4. Preventing Overﬁtting via Sample Reweighting for Recommender System Incremental Update. </b><br />
 											[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17928" style="color:green">paper</a>][<a href="https://github.com/danni9594/SRIU" style="color:orange">code</a>][<a href="https://dblp.uni-trier.de/rec/conf/aaai/PengHZZ21.html?view=bibtex" style="color:purple">bibtex</a>]<br />
 											Danni Peng, Xiaobo Hu, Anxiang Zeng, Jie Zhang<br />
 											AAAI 2021 (Student Abstract)
