--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ a { text-decoration: none; }
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/profile_pic_3.png" alt="" width="200"/></span>
+						<span class="logo"><img src="images/profile_pic_3.png" alt="" width="250"/></span>
 						<h1>Danni PENG</h1>
 						<p>“Act as if what you do makes a difference. It does.” — <em>William James</em><br />
 						<!-- built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>. -->
@@ -53,8 +53,8 @@ a { text-decoration: none; }
 										<header class="major">
 											<h2>About</h2>
 										</header>
-										<p>Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a Ph.D. student
-											at Nanyang Technological University (NTU), under the <a href="https://www.ntu.edu.sg/alibaba-ntu-jri" style="color:blue">Alibaba-NTU Talent Programme</a>. My supervisor is <a href="http://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a>. Previously, I obtained my B.Eng. (Hons.) degree from National University of Singapore (NUS). <br /> My research focuses on multi-task/multi-distribution learning scenarios including meta-learning, continual learning, and domain generalization, with applications in computer vision and recommender systems. </p>
+										<p>Hi! My name is Danni Peng (彭丹昵). <br /> I'm currently a research scientist at the <a href="https://www.a-star.edu.sg/ihpc" style="color:blue">Institute of High Performance Computing (IHPC), A*STAR</a>. Prior to joining IHPC, I obtained my Ph.D. degree in Computer Science from Nanyang Technological University (NTU), supervised by <a href="http://www.cse.cuhk.edu.hk/~sinnopan/" style="color:blue">Prof. Sinno Jialin Pan</a> and sponsored by the <a href="https://www.ntu.edu.sg/alibaba-ntu-jri" style="color:blue">Alibaba-NTU Talent Programme</a>. Earlier, I received my B.Eng. (Hons.) degree from the National University of Singapore (NUS). <br /> My research focuses on multi-task/multi-distribution learning scenarios, including meta-learning, continual learning, federated learning, and domain generalization. </p>
+
 										<!-- <ul class="actions"> -->
 											<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
 										<!-- </ul> -->
@@ -143,7 +143,11 @@ a { text-decoration: none; }
 											[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17928" style="color:green">paper</a>][<a href="https://github.com/danni9594/SRIU" style="color:orange">code</a>][<a href="https://dblp.uni-trier.de/rec/conf/aaai/PengHZZ21.html?view=bibtex" style="color:purple">bibtex</a>]<br />
 											Danni Peng, Xiaobo Hu, Anxiang Zeng, Jie Zhang<br />
 											AAAI 2021 (Student Abstract)
-											</p>
+										</p>
+										<h4 style="font-size:135%">Doctoral Thesis</h4>
+										<p style="font-size:120%"><b>Learning to Generalize to New Tasks/Domains with Limited Data </b>
+											[<a href="https://dr.ntu.edu.sg/handle/10356/171769" style="color:green">link</a>]
+										</p>
 										<h3 style="font-size:150%"><u>Services</u> </h3>
 										<h4 style="font-size:135%">Journal Reviewer</h4>
 										<p style="font-size:120%">
@@ -184,7 +188,7 @@ a { text-decoration: none; }
 								<!-- <dt>Phone</dt> -->
 								<!-- <dd>(000) 000-0000 x 0000</dd> -->
 								<dt>Email</dt>
-								<dd>danni001@ntu.edu.sg</a></dd>
+								<dd>dannip@ihpc.a-star.edu.sg</a></dd>
 							</dl>
 							<ul class="icons">
 								<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
